--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -444,7 +444,8 @@
     </div>
 </div>
  -->
-<div class="container is-fluid pad">
+<div class="container is-fluid overviewMargin">
+<div class="overviewMargin">
     <div class="tile is-ancestor">
         <div class="tile is-vertical">
             <div class="tile">
@@ -490,6 +491,7 @@
                                                             <p><i class="fa fa-sort-numeric-asc"></i> NSR Number:
                                                                 <input type="text" style="width: 120px;" ng-model="overview.owner.nsrRegistration">
                                                             </p>
+                                                           </p> 
                                                             <button class="button is-primary" ng-click="profile = !profile" style="margin-bottom: 10px;">Close</button>
                                                             <button class="button is-success" ng-click="overview.updateProfile(overview.owner)" style="margin-bottom: 10px;">Save</button>
                                                     </div>
@@ -631,5 +633,6 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 </div>
