--- a/src/js/pupInfo/pupInfo.html
+++ b/src/js/pupInfo/pupInfo.html
@@ -35,7 +35,7 @@
                                         <button type="submit" class="button is-info" ng-click="pupInfo.editPup()">
                                             Update
                                         </button>
-                                        <button type="button" class="button is-danger" ng-click="pupInfo.showeditableOwnerInfo = false">
+                                        <button type="button" class="button is-danger" ng-click="pupInfo.showeditableOwnerInfo = false; pupInfo.editPup()">
                                             Cancel
                                         </button>
                                     </div>
