Redid Overview page

--- a/src/js/addPup/addPup.html
+++ b/src/js/addPup/addPup.html
@@ -34,7 +34,7 @@
                                 <input class="input is-medium" type="date" placeholder="Birthdate" ng-model="pup.newPup.birthdate" required>
                             </p>
                             <p class="control">
-                                <label class="label">Enter any Medications</label>
+                                <label class="label">Enter any Medical Conditions</label>
                                 <input class="input  is-medium" type="text" placeholder="Medical Conditions" ng-model="pup.newPup.medConditions" required>
                             </p>
                             <label class="label">Enter the {{pup.newPup.name}}'s Chip Information</label>
