--- a/src/js/login/login.html
+++ b/src/js/login/login.html
@@ -68,7 +68,7 @@
                                 <p class="control has-icon has-icon-right">
                                     <input class="input is-primary" type="email" name="email" placeholder="Email" ng-model="login.registerInfo.email"><i class="fa fa-envelope-o" aria-hidden="true"></i>
                                 </p>
-                                <label class="label fontColor">NSR Registration</label>
+                                <label class="label fontColor">National Service Animal Registry Number</label>
                                 <p class="control has-icon has-icon-right">
                                     <input class="input is-primary" type="text" name="nsrRegistration" placeholder="NSR Registration" ng-model="login.registerInfo.nsrRegistration"><i class="fa fa-paw" aria-hidden="true"></i>
                                 </p>
