--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#" ng-click="nav.passId()" ui-sref="overview({_id: nav.ownerId})">Home</a>
             <a href="#" ng-click="nav.passId()" ui-sref="events({_id: nav.ownerId})">Events</a>
-            <a href="#" ng-click="nav.passId()" ui-sref="parks({_id: nav.ownerId})">Parks</a>
+            <a href="#" ng-click="nav.passId()" ui-sref="parks({_id: nav.ownerId})">Explore</a>
             <a href="#" ng-click="nav.passId()" ui-sref="photo({_id: nav.ownerId})">Photos</a>
             <a href="#" ng-click="login.logoutUser()" onclick="closeNav()">Logout</a>
             <a style="padding: 0;"><img id="kylo" style="border: none; margin-top: 155px;" src="images/kyloRen3.png"></a>
@@ -79,42 +79,43 @@
         </footer>
     </div>
     <!--bower:js-->
-    <script src="bower_components/angular/angular.js "></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js "></script>
-    <script src="bower_components/jquery/dist/jquery.js "></script>
-    <script src="bower_components/toastr/toastr.js "></script>
-    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js "></script>
-    <script src="bower_components/underscore/underscore.js "></script>
-    <script src="bower_components/angular-ui-router-styles/ui-router-styles.js "></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js "></script>
-    <script src="bower_components/filepicker-js/filepicker.min.js "></script>
-    <script src="bower_components/angular-filepicker/dist/angular_filepicker.js "></script>
-    <script src="bower_components/angular-xeditable/dist/js/xeditable.js "></script>
-    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js "></script>
-    <script src="bower_components/moment/moment.js "></script>
-    <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js "></script>
-    <script src="bower_components/angular-datepicker/dist/angular-datepicker.js "></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/toastr/toastr.js"></script>
+    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/angular-ui-router-styles/ui-router-styles.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/filepicker-js/filepicker.min.js"></script>
+    <script src="bower_components/angular-filepicker/dist/angular_filepicker.js"></script>
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
+    <script src="bower_components/angular-datepicker/dist/angular-datepicker.js"></script>
+    <script src="bower_components/angular-momentjs/angular-momentjs.js"></script>
     <!--endbower-->
     <!--inject:js-->
-    <script src="js/app.module.js "></script>
-    <script src="js/addPup/addPup.controller.js "></script>
-    <script src="js/core/crud.factory.js "></script>
-    <script src="js/core/event.factory.js "></script>
-    <script src="js/core/fitness.factory.js "></script>
-    <script src="js/core/login.factory.js "></script>
-    <script src="js/core/medical.factory.js "></script>
-    <script src="js/core/overview.factory.js "></script>
-    <script src="js/core/photo.factory.js "></script>
-    <script src="js/core/pup.factory.js "></script>
-    <script src="js/core/register.factory.js "></script>
-    <script src="js/core/todo.factory.js "></script>
-    <script src="js/events/events.controller.js "></script>
-    <script src="js/login/login.controller.js "></script>
-    <script src="js/navBar/navbar.controller.js "></script>
-    <script src="js/overview/overview.controller.js "></script>
-    <script src="js/parks/parks.controller.js "></script>
-    <script src="js/photos/photo.controller.js "></script>
-    <script src="js/pupInfo/pupInfo.controller.js "></script>
+    <script src="js/app.module.js"></script>
+    <script src="js/addPup/addPup.controller.js"></script>
+    <script src="js/core/crud.factory.js"></script>
+    <script src="js/core/event.factory.js"></script>
+    <script src="js/core/fitness.factory.js"></script>
+    <script src="js/core/login.factory.js"></script>
+    <script src="js/core/medical.factory.js"></script>
+    <script src="js/core/overview.factory.js"></script>
+    <script src="js/core/photo.factory.js"></script>
+    <script src="js/core/pup.factory.js"></script>
+    <script src="js/core/register.factory.js"></script>
+    <script src="js/core/todo.factory.js"></script>
+    <script src="js/events/events.controller.js"></script>
+    <script src="js/login/login.controller.js"></script>
+    <script src="js/navBar/navbar.controller.js"></script>
+    <script src="js/overview/overview.controller.js"></script>
+    <script src="js/parks/parks.controller.js"></script>
+    <script src="js/photos/photo.controller.js"></script>
+    <script src="js/pupInfo/pupInfo.controller.js"></script>
     <!--endinject-->
     <script src="style/main.js "></script>
     <script src="http://use.fontawesome.com/29fd29a782.js "></script>
