--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -58,7 +58,7 @@
         <div class="tile is-parent">
             <article class="tile is-child box notification cardColorPurple">
                 <figure class="image is-1by1">
-                    <img class="" ng-src="{{overview.photos[0].picture.url}}" alt="Image">
+                    <img class="" ng-src="{{overview.photos[6].picture.url}}" alt="Image">
                 </figure>
             </article>
         </div>
@@ -163,28 +163,16 @@
         </div>
     </div>
     <div class="tile is-ancestor">
-        <div class="tile is-parent is-3">
-            <article class="tile is-child box notification cardColorBlue">
-                <figure class="image is-1by1">
-                    <img class="" ng-src="{{overview.photos[3].picture.url}}" alt="Image">
-                </figure>
-            </article>
-        </div>
-        <div class="tile is-parent is-6">
+        
+        <div class="tile is-parent is-12">
             <article class="tile is-child box notification cardColorPurple">
-                <p class="title">Thirteen</p>
-                <p class="subtitle">Subtitle</p>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
+                <div class="content is-pulled-right ">
+                <figure class="image is-24x24">
+                    <img class="" src="../../images/ImageEdit2.png" " alt="Image">
+                </figure>
                 </div>
             </article>
         </div>
-        <div class="tile is-parent is-3">
-            <article class="tile is-child box notification is-primary">
-                <figure class="image is-1by1">
-                    <img class="" ng-src="{{overview.photos[4].picture.url}}" alt="Image">
-                </figure>
-            </article>
-        </div>
+        
     </div>
 </div>
