--- a/src/js/events/events.html
+++ b/src/js/events/events.html
@@ -10,7 +10,7 @@
         </div>
         <div class="tile" ng-repeat="event in events.events.events.event">
             <div class="tile is-parent">
-                <article class="tile is-child notification is-info">
+                <article class="tile is-child notification cardColorBlue">
                     <div class="content">
                         <!-- Content -->
                          <p>
